opam-version: "2.0"
synopsis: "Ingest and validate source data for FB online"
description: "Ingest and validate source data for FB online"
maintainer: ["AlleyCat (alleycatcc)"]
authors: [
  "Allen Haim (allen@alleycat.cc)"
  "Arie Blom (arie@alleycat.cc)"
]
license: "GPL-3.0-or-later"
tags: []
homepage: "https://github.com/AmsterdamUniversityPress/fb-ingest"
doc: "https://github.com/AmsterdamUniversityPress/fb-ingest"
bug-reports: "https://github.com/AmsterdamUniversityPress/fb-ingest"
depends: [
  "ocaml"
  "dune" {>= "3.13"}
  "odoc" {with-doc}
  "batteries" {>="3.7.2"}
  "cmdliner" {>="1.2.0"}
  "csv" {>="2.4"}
  "fmt" {>="0.9.0"}
  "ppx_deriving_yojson" {>="3.7.0"}
  "ppxlib" {>="0.31.0"}
  "rresult" {>="0.7.0"}
  "re" {>="1.11.0"}
  "uuidm" {>="0.9.8"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/AmsterdamUniversityPress/fb-ingest"
