(library
 (name fb_ingest)
 (public_name fb_ingest)
 (modules fb_ingest convert process types util)
 (preprocess (pps ppx_composer ppx_deriving_yojson))
 (libraries batteries csv fmt pcre
            ppx_deriving_yojson.runtime
            rresult uuidm yojson))

(library
  (name ppx_composer)
  (modules ppx_composer)
  (kind ppx_rewriter)
  (libraries ppxlib))
